# perseus-cts

./: .coverage  .gitignore  .pdm-python  README.md  pyproject.toml
scripts/: check_corpus.py  compile_corpus.py  fix_citestructure_depth.py  fix_first_level_delim.py  set_refsDecl_xml_id.py
src/perseus_cts/: __init__.py  chunker.py  constants.py  cts_resolver.py
src/perseus_cts/models/: __init__.py  core.py  corpus.py  document.py
tests/: test_chunking.py  test_corpus.py  test_cts_resolver.py  test_tei_document.py
tests/data/: phi1017.phi007.perseus-lat2.xml  tlg0001.tlg001.perseus-grc2.xml  tlg0003.tlg001.perseus-grc2.xml  tlg0011.tlg001.perseus-grc2.xml  tlg0086.tlg034.perseus-grc2.xml
